syntax = "proto3";

package doc;

import "definitions/doc/UserDocParsedStatus.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/doc";

/**
 *	接口描述: 手动更新文献引用信息
 *	接口url: /userDoc/manualUpdateDocCiteInfo
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message ManualUpdateDocCiteInfoReq {
  //paperId和pdfId不能全为空
  optional string paperId = 1;
  //paperId和pdfId不能全为空
  optional string pdfId = 2;
  //文献标题
  optional string docName = 3;
  //作者(新增的作者名称传入literal字段)
  repeated UserDocAuthorInfo authorList = 4;
  //doi
  optional string doi = 5;
  //发布时间,yyyy-MM-dd
  optional string publishDate = 6;
  //收录情况
  optional string venue = 7;
  //分区信息
  optional string partition = 8;
  //文献类型
  optional string docType = 9;
  //卷次
  optional string volume = 10;
  //期号
  optional string issue = 11;
  //页码
  optional string  page= 12;

  optional string  userId= 13;

}


/**
 *	接口描述: 检索更新文献引用信息
 *	接口url: /userDoc/searchUpdateDocCiteInfo
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message SearchUpdateDocCiteInfoReq {
  //paperId和pdfId不能全为空
  optional string paperId = 1;
  //paperId和pdfId不能全为空
  optional string pdfId = 2;
  //文献标题
  optional string docName = 3;
  //作者(新增的作者名称传入literal字段)
  repeated UserDocAuthorInfo authorList = 4;
  //doi
  optional string doi = 5;
  //发布时间,yyyy-MM-dd
  optional string publishDate = 6;
  //收录情况
  optional string venue = 7;
  //分区信息
  optional string partition = 8;
  //文献类型
  optional string docType = 9;
  //卷次
  optional string volume = 10;
  //期号
  optional string issue = 11;
  //页码
  optional string  page= 12;

  optional string  userId= 13;

}

message UpdateDocCiteInfoResponse {
  uint32 status=1;
  string message=2;
  string data =3;
}

/**
 *	接口描述: 获取用户文献相关的作者列表
 *	接口url: /userDoc/getDocRelatedAuthorList
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocRelatedAuthorListReq {
  //文件夹id
  optional string folderId = 1;
  optional string userId = 2;
}

message GetDocRelatedAuthorListResponse {
  uint32 total = 1;
  repeated string authorInfos = 2;
}

/**
 *	接口描述: 获取用户文献相关的标签列表
 *	接口url: /userDoc/getDocRelatedClassifyList
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocRelatedClassifyListReq {
  //文件夹id
  optional string folderId = 1;
  optional string userId = 2;
}

message GetDocRelatedClassifyListResponse {
  uint32 total = 1;
  repeated UserDocClassifyInfo classifyInfos = 2;
}

/**
 *	接口描述: 获取用户文献相关的收录情况列表
 *	接口url: /userDoc/getDocRelatedVenueList
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocRelatedVenueListReq {
  //文件夹id
  optional string folderId = 1;
  optional string userId = 2;
}

message GetDocRelatedVenueListResponse {
  uint32 total = 1;
  repeated string venueInfos = 2;
}


/**
 *	接口描述: 获取用户文献数量
 *	接口url: /userDoc/getDocCount
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocCountReq {
}

message GetDocCountResponse {
  uint32 count = 1;
}


/**
 *	接口描述: 获取用户单个文献详细信息
 *	接口url: /userDoc/getSingleDocInfo
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回UserDocManage.UserDocInfo
 */
message GetSingleDocInfoReq {
  //文献id
  string docId = 1;
  optional string userId = 2;
}

message GetSingleDocInfoResponse {
  uint32 status=1;
  string message=2;
  UserDocInfo data =3;
}

/**
 *	接口描述: 获取用户文献列表
 *	接口url: /userDoc/getDocList
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocListReq {

  optional UserDocListSortType sortType = 1;

  //是否升序
  optional bool ascSort = 2;

  //标签id
  repeated string classifyIds = 3;

  //筛选的作者信息
  repeated string authorInfos = 4;

  //筛选的收录情况
  repeated string venueInfos = 5;

  optional uint32 pageSize = 6;
  optional uint32 currentPage = 7;
  optional string userId = 8;
  optional string folderId = 9;
  optional string searchContent = 10;

  optional bool extMeta = 11;

  repeated string jcrPartions = 12;

  repeated float impactOfFactorRange = 13;

  bool onlyShowDocsWithImpactOfFactor = 14;

  //只看有pdf的数据
  optional bool onlyPdf = 15;
}

message GetDocListResponse {
  uint32 total = 1;
  repeated UserDocInfo docList = 2;
}


/**
 * 文献列表左侧-获取文件夹列表和文献列表
 * url: /userDoc/getDocIndex
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message GetDocIndexReq {
  optional string userId = 1;
}

message UserDocInfo {
  string  docId = 1;
  string  docName = 2;
  uint32  sort = 3;
  string  paperId = 4;
  optional string  pdfId = 5;
  optional string  remark = 6;
  uint64  createDate = 7;
  optional uint64  lastReadTime = 8;
  bool  isLatestRead = 9;
  optional string noteId = 10;
  bool newPaper = 11;
  repeated UserDocClassifyInfo  classifyInfos = 12;
  PaperRepositoryStatus paperRepositoryStatus = 13;
  UserDocDisplayAuthor displayAuthor = 14;
  UserDocDisplayVenue displayVenue = 15;
  UserDocDisplayPublishDate displayPublishDate = 16;
  //meta信息
  optional UserDocDisplayPage displayPage = 17;
  optional UserDocDisplayDocType displayDocType = 18;
  //会议
  optional UserDocDisplayEventInfo displayEventInfo = 19;
  optional UserDocDisplayUrl displayUrl = 20;
  optional UserDocDisplayLanguage displayLanguage = 21;
  optional UserDocDisplayDoi displayDoi = 22;
  optional UserDocDisplayVolume displayVolume = 23;
  optional UserDocDisplayIssue displayIssue = 24;
  optional UserDocDisplayPartition displayPartition = 25;
  optional DocSearchResult searchResult = 26;
  //是否有附件
  bool hasAttachment = 27;

  optional UserDocDisplayJcrVenuePartion jcrVenuePartion = 28;

  int32 importantanceScore = 29;

  optional UserDocDisplayJcrImpactFactor impactOfFactor = 30;

  DocReadingStatus docReadingStatus = 31;

  optional int32 progress = 32;
  bool fillExtMeta = 33;

  //解析状态
  doc.UserDocParsedStatusEnum parsedStatus = 34;
  // Embedding状态
  doc.UserDocParsedStatusEnum embeddingStatus = 35;
  //解析总体进度比
  optional string parsedProgress = 36;

}

enum DocReadingStatus {
  //未读
  UNREAD = 0;
  //正在读
  READING = 1;
  //已读
  READ = 2;

}

message UserDocDisplayJcrVenuePartion {
  optional string jcrVenuePartion = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originJcrVenuePartion = 3;
}

message UserDocDisplayJcrImpactFactor {
  optional float impactOfFactor = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional float originImpactOfFactor = 3;
}

message DocSearchResult {
  //搜索命中的文献名称
  optional string hitDocName = 1;
  //搜索命中的笔记内容  这个目前没用
  optional string hitNote = 2;
  ////搜索命中的文献备注
  optional string hitRemark = 3;
  //搜索命中的发布日期
  optional string hitPublishDate = 4;
  //搜索命中的作者
  optional string hitAuthor = 5;
  //搜索命中的收录情况
  optional string hitVenue = 6;
  //搜索命中的jcr分区
  optional string hitJcrVenuePartion = 7;
}

enum PaperRepositoryStatus{
  //这是一篇论文, IAG中也存在这边论文的信息
  IN_REPOSITORY = 0;
  //这不是一篇论文, 或者IAG没有论文的相关信息
  NOT_IN_REPOSITORY = 1;
}

enum UserDocListSortType {
  DEFAULT =0;

  //最近阅读
  LAST_READ = 1;

  //最近添加
  LAST_ADD = 2;

  //文献名
  DOC_NAME = 3;

  //发布日期
  PUBLISH_DATE = 4;

  //自定义排序
  CUSTOM_SORT = 5;
  
  //按重要性打分
  IMPORTANCE_SCORE = 6;

  //按影响因子排序
  IMPACT_OF_FACTOR = 7;
}

message UserDocClassifyInfo {
  string classifyId = 1;
  string classifyName = 2;
}


message UserDocDisplayVolume {
  optional string volume = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originVolume = 3;
}

message UserDocDisplayIssue {
  optional string issue = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originIssue = 3;
}


message UserDocDisplayPartition {
  optional string partition = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originPartition = 3;
}

message UserDocDisplayDoi {
  optional string doi = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originDoi = 3;
}

message UserDocDisplayUrl {
  optional string url = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originUrl = 3;
}

message UserDocDisplayLanguage {
  optional string language = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originLanguage = 3;
}

message UserDocDisplayEventInfo {
  optional EventInfo eventInfo = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional EventInfo originEventInfo = 3;
}

message EventInfo {
  optional string eventTitle = 1;
  optional string eventPlace = 2;
  repeated string eventDate = 3;
}

message UserDocDisplayPage {
  optional string page = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originPage = 3;
}

message UserDocDisplayDocType {
  optional string docType = 1;
  //用户是否编辑过
  optional bool userEdited = 2;
  optional string originDocType = 3;
}

message UserDocDisplayVenue {
  repeated string venueInfos = 1;
  //用户是否编辑过
  bool userEdited = 2;
  repeated string originVenueInfos = 3;
}


message UserDocDisplayAuthor {
  repeated UserDocAuthorInfo authorInfos = 1;
  bool userEdited = 2;
  repeated UserDocAuthorInfo originAuthorInfos = 3;
}
message UserDocAuthorInfo {
  optional string id = 1;
  optional string given = 2;
  optional string family = 3;
  //作者名(全称)
  string literal = 4;
  bool isAuthentication = 5;
}

message UserDocDisplayPublishDate {
  string publishDate = 1;
  bool userEdited = 2;
  string originPublishDate = 3;
}

/**
 *	接口描述: 标记已读
 *	接口url: /userDoc/mark/finish
 *	接口请求方式: PUT
 *	参数格式:application/json
 *  返回通用的状态码
 */
 message MarkFinishReq {

    optional string paperId = 1;

    string pdfId = 2;

}

/**
 *	接口描述: 按重要性打分
 *	接口url: /userDoc/importance/score
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回通用的状态码
 */ 
message ImportanceScoreReq {

  string docId = 1;
  int32 score = 4;

}


/**
 *	接口描述: 获取当前目录下的所有jcr分区
 *	接口url: /userDoc/jcr/partions
 *	接口请求方式: GET
 *	参数格式:application/json
 *  返回通用的状态码
 */
message JcrPartionsReq {

  string folderId = 1;

}

message JcrPartionsResponse {

  repeated string jcrPartions = 1;

}

/**
 *	接口描述: 修改影响因子
 *	接口url: /userDoc/impact/factor
 *	接口请求方式: PUT
 *	参数格式:application/json
 *  返回通用的状态码
 */
 message ImpactFactorReq {

  string docId = 1;

  optional float impactOfFactor = 2;

}

message ImpactFactorResponse {

  float originalImpactOfFactor = 1;

  bool rollbackEnable = 2;

  float currentImpactOfFactor = 3;

}

/**
 *	接口描述: 修改jcr分区
 *	接口url: /userDoc/update/jcr/partion
 *	接口请求方式: PUT
 *	参数格式:application/json
 *  返回通用的状态码
 */
 message JcrPartionUpdateReq {

  string docId = 1;

  string jcrPartion = 2;

}

message JcrPartionUpdateResponse {

  string originalJcrPartion = 1;

  bool rollbackEnable = 2;

  string currentJcrPartion = 3;

}
/**
 *	接口描述: 修改备注
 *	接口url: /userDoc/updateDocRemark
 *	接口请求方式: PUT
 *	参数格式:application/json
 *  返回通用的状态码
 */
message UpdateDocRemarkReq {

  string docId = 1;

  string remark = 2;

}


/**
 *	接口描述: 更新阅读状态
 *	接口url: /userDoc/updateReadStatus
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回通用的状态码
 */
message UpdateReadStatusRequest {
  optional string paperId = 1;
  string pdfId = 2;
  optional DocReadingStatus status = 3;
  optional int32 progress = 4;
}

/**
 *	接口描述: 删除分类
 *	接口url: /userDoc/deleteClassify
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回通用的状态码
 */
message DeleteClassifyReq {
  string classifyId = 1;
}

/**
 *	接口描述: 更新分类
 *	接口url: /userDoc/updateClassify
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回通用的状态码
 */
message UpdateClassifyReq {
  string classifyId = 1;
  string classifyName = 2;
  string remark = 3;
}

/**
 *	接口描述: 新增分类
 *	接口url: /userDoc/addClassify
 *	接口请求方式: POST
 *	参数格式:application/json
 *  返回通用的状态码
 */
message AddClassifyReq {
  string classifyName = 1;
  string remark = 2;
}

message AddClassifyResponse {
  string docId = 1;
  string classifyId = 2;
  string classifyName = 3;
}

/**
 *	接口描述: 修改文献的分类
 *	接口url: /userDoc/attachDocToClassify
 *	接口请求方式: POST
 *	参数格式:application/json
 */
message AttachDocToClassifyReq {
   string docId = 1;
   string classifyId = 2;
   string classifyName = 3;
}

/**
 *  接口描述: 删除文献的分类
 *  接口url: /userDoc/removeDocFromClassify
 *  接口请求方式: POST
 *  参数格式:application/json
 */
message DeleteDocClassifyReq {
    string docId = 1;
    string classifyId = 2;
}